--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
         </div>
     </head>
     <div class="SpecialBox">
-        <div>
+        <div class="containerSpecialBox">
             <div class="reloj">
                 <p class="fecha"></p>
                 <p class="tiempo"></p>
             </div>
-            <div><h2>PREMIO:<p class="valorColor">$200.000</p></h2></div>
-            <div class="ganadorRifa"><h2>GANADOR:11pm-25/06/24</h2></div>
+            <div><h2>El día:<p class="valorColor">25/06/2024</p></h2></div>
+            <div><h2>Se rifa:<p class="valorColor">$200.000</p></h2></div>
+            <div class="ganadorRifa"><h2>GANADOR: 11 pm Col</h2></div>
             <div class="CallToAction">
                 <li>
                     <button class="comprar">
