Ajustando texto WP call to actions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="CallToAction">
                 <li>
                     <button class="comprar">
-                        <a href="https://wa.me/573115617245?text=Hola,20%quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
+                        <a href="https://wa.me/573115617245?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
                     </button>
                     
                 </li>
@@ -810,7 +810,7 @@
     <div class="CallToAction">
         <li>
             <button class="comprar">
-                <a href="https://wa.me/573115617245?text=Hola,20%quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
+                <a href="https://wa.me/573115617245?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
             </button>
             
         </li>
