Actualizando Politicas de Juego

--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -38,13 +38,13 @@
             <h3>Determinación del Número Ganador:</h3>
             <ul>
                 <li>
-                    La rifa se realiza todos los días utilizando las dos últimas cifras del número ganador de la Lotería Astro Luna.
+                    La rifa se realiza todos los días utilizando las dos últimas cifras del número ganador de la Lotería el Samán de la Suerte.
                 </li>
                 <li>
-                    La Lotería Astro Luna realiza su sorteo a las 11:00 PM todos los días.
+                    La Lotería el Samán de la Suerte realiza su sorteo a la 1:00 PM todos los días de Lunes a Sábado, Domingos y Festivos a las 7 pm.
                 </li>
                 <li>
-                    El número ganador de la rifa de DailyWin será el mismo que las dos últimas cifras del número ganador de la Lotería Astro Luna.
+                    El número ganador de la rifa de DailyWin será el mismo que las dos últimas cifras del número ganador de la Lotería el Samán de la Suerte.
                 </li>
             </ul>
             <br></br>
