Agregando cambios a las politicas

--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -54,7 +54,7 @@
                     El número ganador de DailyWin se publica en la página web oficial de DailyWin y se anuncia a través de los estados de WhatsApp.
                 </li>
                 <li>
-                    La actualización del número ganador se realiza en un tiempo no superior a 20 minutos después de que la Lotería Astro Luna haya anunciado su resultado.
+                    La actualización del número ganador se realiza en un tiempo no superior a 20 minutos después de que la Lotería el Samán de la Suerte haya anunciado su resultado.
                 </li>
             </ul>
             <br></br>
