Agregando seccion ganadores DailyWin

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <div class="RulesGame">
             <ul>
                 <li>
+                    <a href="./Strategy/Ganador.html">Ganadores</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
                     <a href="./Strategy/Estrategica.html">Nosotros</a>
                 </li>
             </ul>
