--- a/Strategy/Ganador.html
+++ b/Strategy/Ganador.html
@@ -15,7 +15,8 @@
             <h2>Primer sorteo DailyWin Colombia</h2>
             <h3>Mes: Julio</h3>
             <h4>Fecha: 24/08/2024</h4>
-            <p> Ganador: Andres Rojas: 04</p>
+            <h4>Hora: 1:00 pm Colombia</h4>
+            <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
         </div>
     </div>
     <footer class="footer">
