Agregando sorteos del mes

--- a/Strategy/Ganador.html
+++ b/Strategy/Ganador.html
@@ -18,6 +18,27 @@
             <h4>Hora: 1:00 pm Colombia</h4>
             <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
         </div>
+        <div>
+            <h2>Segundo sorteo DailyWin Colombia</h2>
+            <h3>Mes: Julio</h3>
+            <h4>Fecha: Por Determinar</h4>
+            <h4>Hora: 1:00 pm Colombia</h4>
+            <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
+        </div>
+        <div>
+            <h2>Tercer sorteo DailyWin Colombia</h2>
+            <h3>Mes: Julio</h3>
+            <h4>Fecha: Por Determinar</h4>
+            <h4>Hora: 1:00 pm Colombia</h4>
+            <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
+        </div>
+        <div>
+            <h2>Cuarto sorteo DailyWin Colombia</h2>
+            <h3>Mes: Julio</h3>
+            <h4>Fecha: Por Determinar</h4>
+            <h4>Hora: 1:00 pm Colombia</h4>
+            <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
+        </div>
     </div>
     <footer class="footer">
         <p>© 2024 DailyWinColombia</p>
