Cambios en Politicas de Juego

--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -97,6 +97,12 @@
                     Se espera que todos los participantes actúen de manera honesta y respetuosa. DailyWin no tolera comportamientos fraudulentos.
                 </li>
             </ul>
+            <h3>Bonus</h3>
+            <ul>
+                <li>
+                    Todos los sabados se realiza un sorteo adicional de $50.000, para quienes hayan adquirido su boleto para el sorteo del dia.
+                </li>
+            </ul>
             <br></br>
             <h1 class="messageRuleGame">¡Participa hoy en DailyWin y conviértete en el próximo ganador!</h1>
         </div>
