Agregando cambios a Politicas de Juego

--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -101,7 +101,7 @@
             <h3>Bonus</h3>
             <ul>
                 <li>
-                    Todos los sabados se realiza un sorteo adicional de $50.000, para quienes hayan adquirido su boleto para el sorteo del dia.
+                    Todos los sabados se realiza un sorteo adicional de $50.000 a través de una ruleta de elección o selector de boletas, para quienes hayan adquirido su boleto para el sorteo del dia.
                 </li>
             </ul>
             <br></br>
