--- a/Strategy/Ganador.html
+++ b/Strategy/Ganador.html
@@ -11,21 +11,21 @@
         <div class="titleGanadores">
             <h1>Ganadores🍀</h1>
         </div>
-        <div>
+        <div class="Sorteo-1">
             <h2>Primer sorteo DailyWin Colombia</h2>
             <h3>Mes: Julio</h3>
             <h4>Fecha: 09/07/2024</h4>
             <h4>Hora: 1:00 pm Colombia</h4>
             <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
         </div>
-        <div>
+        <div class="Sorteo-2">
             <h2>Segundo sorteo DailyWin Colombia</h2>
             <h3>Mes: Julio</h3>
             <h4>Fecha: Por Determinar</h4>
             <h4>Hora: 1:00 pm Colombia</h4>
             <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
         </div>
-        <div>
+        <div class="Sorteo-3">
             <h2>Tercer sorteo DailyWin Colombia</h2>
             <h3>Mes: Julio</h3>
             <h4>Fecha: Por Determinar</h4>
