--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -89,6 +89,9 @@
                 <li>
                     DailyWin se reserva el derecho de modificar estas reglas con previo aviso a los participantes.
                 </li>
+                <li>
+                    Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal. ¡Únete a nosotros para hacer la diferencia!
+                </li>
             </ul>
             <br></br>
             <h3>Conducta:</h3>
