Agregando texto social

--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -90,7 +90,7 @@
                     DailyWin se reserva el derecho de modificar estas reglas con previo aviso a los participantes.
                 </li>
                 <li>
-                    Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal. ¡Únete a nosotros para hacer la diferencia!
+                    Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal. 
                 </li>
             </ul>
             <br></br>
