Agregando actualizacion en section ganadores

--- a/Strategy/Ganador.html
+++ b/Strategy/Ganador.html
@@ -17,6 +17,12 @@
             <h4>Fecha: 10/07/2024</h4>
             <h4>Hora: 1:00 pm Colombia</h4>
             <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
+            <ul>
+                <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
+            </ul>
+            <div class="Ganador-10J24">
+                <img src="../images/10j24.png">
+            </div>
         </div>
         <div class="Sorteo-2">
             <h2>Segundo sorteo DailyWin Colombia</h2>
