Proxima rifa miercoles 17 de Julio

--- a/Strategy/Ganador.html
+++ b/Strategy/Ganador.html
@@ -27,7 +27,7 @@
         <div class="Sorteo-2">
             <h2>Segundo sorteo DailyWin Colombia</h2>
             <h3>Mes: Julio</h3>
-            <h4>Fecha: Por Determinar</h4>
+            <h4>Fecha: 17/07/2024</h4>
             <h4>Hora: 1:00 pm Colombia</h4>
             <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
         </div>
