Agregando numero ganador 10j24 04

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div><h2>El día:<p class="valorColor">10/07/2024</p></h2></div>
             <div><h2>Se rifa:<p class="valorColor">$200.000</p></h2></div>
-            <div class="ganadorRifa"><h2>GANADOR: 1 pm Col</h2></div>
+            <div class="ganadorRifa"><h2>GANADOR: 04</h2></div>
             <div class="CallToAction">
                 <li>
                     <button class="comprar">
