--- a/Strategy/Ganador.html
+++ b/Strategy/Ganador.html
@@ -16,18 +16,18 @@
             <h3>Mes: Julio</h3>
             <h4>Fecha: 10/07/2024</h4>
             <h4>Hora: 1:00 pm Colombia</h4>
-            <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
+            <p>Amanda Penagos: 04</p>
             <ul>
                 <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
             </ul>
             <div class="Ganador-10J24">
-                <img src="../images/10j24.png">
+                <img src="../images/10j24G.png">
             </div>
         </div>
         <div class="Sorteo-2">
             <h2>Segundo sorteo DailyWin Colombia</h2>
             <h3>Mes: Julio</h3>
-            <h4>Fecha: 17/07/2024</h4>
+            <h4>Fecha: 24/07/2024</h4>
             <h4>Hora: 1:00 pm Colombia</h4>
             <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
         </div>
