--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
                 <p class="fecha"></p>
                 <p class="tiempo"></p>
             </div>
-            <div><h2>El día:<p class="valorColor">10/07/2024</p></h2></div>
+            <div><h2>El día:<p class="valorColor">22/07/2024</p></h2></div>
             <div><h2>Se rifa:<p class="valorColor">$200.000</p></h2></div>
-            <div class="ganadorRifa"><h2>GANADOR: 04</h2></div>
+            <div class="ganadorRifa"><h2>GANADOR: 1:00 PM Col</h2></div>
             <div class="CallToAction">
                 <li>
                     <button class="comprar">
                         <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
                     </button>
-                    
                 </li>
             </div>
         </div>
