cambiando tiempo de ejecucion sorteos

--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -38,7 +38,7 @@
             <h3>Determinación del Número Ganador:</h3>
             <ul>
                 <li>
-                    La rifa se realiza todos los días utilizando las dos últimas cifras del número ganador de la Lotería el Samán de la Suerte.
+                    La rifa se realiza cada semana utilizando las dos últimas cifras del número ganador de la Lotería el Samán de la Suerte.
                 </li>
                 <li>
                     La Lotería el Samán de la Suerte realiza su sorteo a la 1:00 PM todos los días de Lunes a Sábado, Domingos y Festivos a las 7 pm.
