Agregando cambios texto: rifa semanal

--- a/Strategy/PoliticGame.html
+++ b/Strategy/PoliticGame.html
@@ -15,7 +15,7 @@
             <h3>Adquisición de Números</h3>
             <ul>
                 <li>
-                    Los participantes pueden adquirir un único número para cada rifa diaria.
+                    Los participantes pueden adquirir un único número para cada rifa semanal.
                 </li>
                 <li>
                     Los números disponibles van del 00 al 99.
