Agregando cambios visuales a la web luego de revisar el lighthouse

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="logo">
-            <img src="./images/DailyWin.png">
+            <img src="./images/DailyWin.png" alt="logo">
         </div>
     </head>
     <div class="SpecialBox">
