mejorando semantica de etiqueta menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <head class="head_1">
-        <div class="RulesGame">
+        <menu class="RulesGame">
             <ul>
                 <li>
                     <a href="./Strategy/Ganador.html">Ganadores</a>
@@ -25,7 +25,7 @@
                     <a href="./Strategy/PoliticGame.html">Politicas de juego</a>
                 </li>
             </ul>
-        </div>
+        </menu>
         <div class="logo">
             <img src="./images/DailyWin.png" alt="logo">
         </div>
