Agregando al menu: Social

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             </ul>
             <ul>
                 <li>
+                    <a href="./Strategy/Social.html">Social</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
                     <a href="./Strategy/Estrategica.html">Nosotros</a>
                 </li>
             </ul>
