Agregando cambios en UX header y propiedades css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="./Strategy/PoliticGame.html">Politicas de juego</a>
+                    <a href="./Strategy/PoliticGame.html">¿Cómo jugar?</a>
                 </li>
             </ul>
         </menu>
