--- a/Strategy/Social.html
+++ b/Strategy/Social.html
@@ -12,10 +12,11 @@
             <h1>Social</h1>
         </div>
         <div class="Sorteo-1">
-            <h2>Bienestar Animal: Fundación CAPA Neiva</h2>
-            <h4>Fecha: 21/07/2024</h4>
-            <br>
             <p>En DailyWin, creemos en el poder de la comunidad para hacer una diferencia. Cada boleta de rifa que compras no solo aumenta tus oportunidades de ganar premios increíbles, sino que también contribuye directamente a apoyar causas sociales significativas. Estamos comprometidos a donar una parte de cada venta de boletas a fundaciones locales que trabajan arduamente para mejorar la vida de quienes más lo necesitan.</p>
+            <br>
+            <h2>Bienestar Animal</h2>
+            <h4>Fundación CAPA Neiva | Fecha: 21/07/2024</h4>
+            <br>
             <ul>
                 <a href="https://www.facebook.com/CAPANeiva/?locale=es_LA">Fundación CAPA Neiva</a>
             </ul>
