--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles.css" type="text/css">
+    <link rel="icon" type="images/png" href="./images/DailyWin.png">
     <script defer src="./DailyWin_Carousel.js"></script>
     <title>DailyWin.co.v1</title>
 </head>
