Agregando atributo a etiqueta video para quitar descargas

--- a/Strategy/Social.html
+++ b/Strategy/Social.html
@@ -18,7 +18,7 @@
             <h4><a href="https://www.facebook.com/CAPANeiva/?locale=es_LA">Fundación CAPA Neiva</a> | Fecha: 21/07/2024</h4>
             <br>
             <div class="Ganador-10J24">
-                <video src="../Video/V-CAPANeiva.mp4" width="360" height="360" controls></video>
+                <video src="../Video/V-CAPANeiva.mp4" width="360" height="360" controls controlsList="nodownload" type="video/mp4" ></video>
             </div>
         </div>
     </div>
