--- a/Strategy/Ganador.html
+++ b/Strategy/Ganador.html
@@ -29,7 +29,13 @@
             <h3>Mes: Julio</h3>
             <h4>Fecha: 22/07/2024</h4>
             <h4>Hora: 1:00 pm Colombia</h4>
-            <p> Ganador: Nombre del ganador: Ultimas dos cifras.</p>
+            <p> Ganador: 02 - Acumulado para la siguiente fecha.</p>
+            <ul>
+                <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
+            </ul>
+            <div class="Ganador-10J24">
+                <img src="../images/S22J2024.png">
+            </div>
         </div>
         <div class="Sorteo-3">
             <h2>Tercer sorteo DailyWin</h2>
