--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <menu class="RulesGame">
             <ul>
                 <li>
-                    <a href="./Strategy/Ganador.html">Ganadores</a>
+                    <a href="./Strategy/Sorteos.html">Sorteos</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="./Strategy/Social.html">Social</a>
+                    <a href="./Strategy/Social.html">Aportes</a>
                 </li>
             </ul>
             <ul>
@@ -44,7 +44,7 @@
             </div>
             <div><h2>El día:<p class="valorColor">22/07/2024</p></h2></div>
             <div><h2>Se rifa:<p class="valorColor">$200.000</p></h2></div>
-            <div class="ganadorRifa"><h2>GANADOR: 02</h2></div>
+            <div class="ganadorRifa"><h2>GANADOR:02</h2></div>
             <div class="CallToAction">
                 <button class="comprar">
                     <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
