Agregando cambios a nosotros

--- a/Strategy/Aportes.html
+++ b/Strategy/Aportes.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles.css" type="text/css">
-    <title>Aporte social</title>
+    <title>Aportes</title>
 </head>
 <body>
     <div class="containerGanadores">
         <div class="titleGanadores">
-            <h1>Social</h1>
+            <h1>Aportes</h1>
         </div>
         <div class="Sorteo-1">
             <p>En DailyWin, creemos en el poder de la comunidad para hacer una diferencia. Cada boleta de rifa que compras no solo aumenta tus oportunidades de ganar premios increíbles, sino que también contribuye directamente a apoyar causas sociales significativas. Estamos comprometidos a donar una parte de cada venta de boletas a fundaciones locales que trabajan arduamente para mejorar la vida de quienes más lo necesitan.</p>
             <br>
-            <h2>Bienestar Animal</h2>
-            <h4><a href="https://www.facebook.com/CAPANeiva/?locale=es_LA">CAPA Neiva</a> | Fecha: 21/07/2024</h4>
+            <h3>Bienestar Animal</h3>
+            <p>El 21 de julio de 2024 se entregaron 14 kg de alimento a <a href="https://www.facebook.com/CAPANeiva/?locale=es_LA">CAPA Neiva</a>, beneficiando especificamente a 25 caninos adultos y 10 cachorros que cuida la fundación.</p>
             <br>
             <div class="Ganador-10J24">
                 <video src="../Video/V-CAPANeiva.mp4" width="360" height="360" controls controlsList="nodownload" type="video/mp4" ></video>
