--- a/Strategy/Estrategica.html
+++ b/Strategy/Estrategica.html
@@ -11,7 +11,7 @@
         <div class="titleNosotros">
             <h1>Nosotros</h1>
         </div>
-        <div>
+        <div class="ContainerDirEstategica">
             <h3>Misión</h3>
             <p>Facilitar la generación de riqueza compartida promoviendo el desarrollo social y económico de las comunidades a través de rifas con propósito.</p>
             <br></div>
