--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="./Strategy/Social.html">Aportes</a>
+                    <a href="./Strategy/Aportes.html">Aportes</a>
                 </li>
             </ul>
             <ul>
