Agregando cambios UI en enlace Nostros y Como jugar

--- a/Strategy/Politicas.html
+++ b/Strategy/Politicas.html
@@ -9,7 +9,7 @@
 <body>
     <div class="ContainerRuleGame">
         <div class="titleRulesGame">
-            <h1>Politicas de juego</h1>
+            <h2>Políticas de juego</h2>
         </div>
         <br>
             <h3>Adquisición de Números</h3>
@@ -17,8 +17,7 @@
                 <li>
                     Los participantes pueden adquirir un único número para cada rifa semanal.
                 </li>
-                <li>
-                    Los números disponibles van del 00 al 99.
+                    Los números disponibles van del <b>00 al 99</b>.
                 </li>
                 <li>
                     Cada número es único y se asigna por orden de compra.
@@ -28,7 +27,7 @@
             <h3>Costo de Participación:</h3>
             <ul>
                 <li>
-                    El valor de cada participación en la rifa es de $3.000 pesos.
+                    El valor de cada participación en la rifa es de <b>$3.000 pesos</b>.
                 </li>
                 <li>
                     Este monto se debe abonar al momento de adquirir el número.
@@ -38,7 +37,7 @@
             <h3>Determinación del Número Ganador:</h3>
             <ul>
                 <li>
-                    La rifa se realiza cada semana utilizando las dos últimas cifras del número ganador de la Lotería el Samán de la Suerte.
+                    La rifa se realiza cada semana utilizando las <b>dos últimas cifras</b> del número ganador de la Lotería el Samán de la Suerte.
                 </li>
                 <li>
                     La Lotería el Samán de la Suerte realiza su sorteo a la 1:00 PM todos los días de Lunes a Sábado, Domingos y Festivos a las 7 pm.
@@ -90,7 +89,7 @@
                     DailyWin se reserva el derecho de modificar estas reglas con previo aviso a los participantes.
                 </li>
                 <li>
-                    Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal. 
+                    <b>Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal</b>. 
                 </li>
             </ul>
             <br></br>
