--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="./Strategy/PoliticGame.html">¿Cómo jugar?</a>
+                    <a href="./Strategy/Politicas.html">¿Cómo jugar?</a>
                 </li>
             </ul>
         </menu>
