--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                 <p class="fecha"></p>
                 <p class="tiempo"></p>
             </div>
-            <div><h2>El día:<p class="valorColor">22/07/2024</p></h2></div>
-            <div><h2>Se rifa:<p class="valorColor">$200.000</p></h2></div>
-            <div class="ganadorRifa"><h2>GANADOR:02</h2></div>
+            <div><h3>Premio: $230.000</h3></div>
+            <div><h3>Juega el día: 02/08/2024</h3></div>
+            <h3>Con las dos últimas cifras de la Loteria El Saman de la Suerte</h3>
+            <div class="ganadorRifa"><h3>GANADOR: 1:00 pm Col</h3></div>
             <div class="CallToAction">
                 <button class="comprar">
                     <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
