Agregando cambios visuales UI

--- a/index.html
+++ b/index.html
@@ -37,30 +37,27 @@
         </div>
     </head>
     <div class="SpecialBox">
-        <div class="containerSpecialBox">
             <div class="reloj">
                 <p class="fecha"></p>
                 <p class="tiempo"></p>
             </div>
             <div><h3>Premio: $220.000</h3></div>
-            <div><h3>Juega el día: 02/08/2024</h3></div>
-            <h3>Con las dos últimas cifras de la Loteria El Saman de la Suerte</h3>
+            <div><h3>Martes 2 de Agosto de 2024</h3></div>
+            <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte</h3>
             <div class="ganadorRifa"><h3>GANADOR: 1:00 pm Col</h3></div>
             <div class="CallToAction">
                 <button class="comprar">
                     <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
                 </button>
             </div>
-        </div>
     </div>
-    <div class="boleteria">
-        <div class="search">
+    <div class="search">
             <h3>Consulta y adquiere tu número ideal</h3>
-            <input type="text" class="buscar-input" id="search" placeholder="Busca tu número de rifa">
+            <input type="text" class="buscar-input" id="search" placeholder="Buscar número">
             <button onclick="buscar()" class="buscar-button">Buscar</button>
             <ul id="results" class="results"></ul>
-        </div>
-        <div class="carrousel">
+    </div>
+    <div class="carrousel">
             <div class="slick-list" id="slick-list">
                 <button class="slick-arrow slick-prev" id="button-prev">
                     <img src="./images/flecha-izquierda.png" alt="flecha izquierda" width="40px" height="40px">
@@ -872,7 +869,6 @@
                 </div>
             </div>
         </div>
-    </div>
     <div class="social">
         <p>Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal.<br>¡Únete a nosotros para hacer la diferencia!</p>
     </div>
