--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
         </div>
     </head>
     <div class="SpecialBox">
+        <div>
             <div class="reloj">
                 <p class="fecha"></p>
                 <p class="tiempo"></p>
             </div>
-            <div><h3>Premio: $220.000</h3></div>
-            <div><h3>Martes 2 de Agosto de 2024</h3></div>
-            <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte</h3>
-            <div class="ganadorRifa"><h3>GANADOR: 1:00 pm Col</h3></div>
+            <div><h3>Premio: $220.000.</h3></div>
+            <div><h3>Martes 2 de Agosto de 2024.</h3></div>
+            <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte.</h3>
+            <div class="ganadorRifa"><h3>GANADOR: 1:00 pm Col.</h3></div>
+            </div>
             <div class="CallToAction">
                 <button class="comprar">
                     <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
                 </button>
-            </div>
+        </div>
+            
     </div>
     <div class="search">
             <h3>Consulta y adquiere tu número ideal</h3>
