Cambios UI DailyWin

--- a/index.html
+++ b/index.html
@@ -33,15 +33,11 @@
             </ul>
         </menu>
         <div class="logo">
-            <img src="./images/DailyWin.png" alt="logo">
+            <img src="./images/DailyWin.png" alt="logo" width="250px">
         </div>
     </head>
     <div class="SpecialBox">
         <div>
-            <div class="reloj">
-                <p class="fecha"></p>
-                <p class="tiempo"></p>
-            </div>
             <div><h3>Premio: $220.000.</h3></div>
             <div><h3>Martes 2 de Agosto de 2024.</h3></div>
             <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte.</h3>
@@ -884,8 +880,5 @@
         <p>© 2024 DailyWinColombia</p>
     </footer>
 </body>
-<!-- 
-<script src="./functions/reloj.js"></script>
--->
 <script src="./functions/script.js"></script>
 </html>
