--- a/Strategy/Sorteos.html
+++ b/Strategy/Sorteos.html
@@ -37,7 +37,7 @@
                     <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
                 </ul>
                 <div class="Ganador-10J24">
-                    <img src="../images/S22J2024.png">
+                    <img src="../images/Historico de Sorteos/Sorteo 22-07-2024/S22J2024.png">
                 </div>
             </table>
         </div>
