Agregando cambios, valor agregado

--- a/Strategy/Politicas.html
+++ b/Strategy/Politicas.html
@@ -89,7 +89,7 @@
                     DailyWin se reserva el derecho de modificar estas reglas con previo aviso a los participantes.
                 </li>
                 <li>
-                    <b>Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal</b>. 
+                    <b>Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones de personas con discapacidad y dedicadas al bienestar animal</b>. 
                 </li>
             </ul>
             <br></br>
