--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="SpecialBox">
         <div>
             <div><h3>Premio: $220.000.</h3></div>
-            <div><h3>Martes 2 de Agosto de 2024.</h3></div>
+            <div><h3>Viernes 2 de Agosto de 2024.</h3></div>
             <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte.</h3>
             <div class="ganadorRifa"><h3>GANADOR: 1:00 pm Col.</h3></div>
             </div>
