--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="./Styles.css" type="text/css">
     <link rel="icon" type="images/png" href="./images/DailyWin.png">
     <title>DailyWin.co.v1</title>
+    <!-- Hotjar Tracking Code for https://jshc27.github.io/DailyWinCo/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:5080905,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 <body>
     <head class="head_1">
