Actualizando datos sorteo 02 agost y proxima fecha de sorteo

--- a/Strategy/Sorteos.html
+++ b/Strategy/Sorteos.html
@@ -47,7 +47,7 @@
                 <p>Mes: Agosto</p>
                 <p>Fecha de sorteo: 02/08/2024</p>
                 <p>Hora de sorteo: 1:00 pm Col</p>
-                <p>Número ganador:</p>
+                <p>Número ganador: 39 - Acumulado para la siguiente fecha.</p>
                 <ul>
                     <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
                 </ul>
