Agregando proxima fecha de sorteo 14 agos

--- a/Strategy/Sorteos.html
+++ b/Strategy/Sorteos.html
@@ -52,7 +52,22 @@
                     <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
                 </ul>
                 <div class="Ganador-10J24">
-                    <img src="../images/Proximo-Sorteo.png">
+                    <img src="../images/Historico de Sorteos/Sorteo 2-08-2024/S020824.png">
+                </div>
+            </table>
+        </div>
+        <div class="Sorteo-4">
+            <table>
+                <h3>Sorteo Número | 3</h3>
+                <p>Mes: Agosto</p>
+                <p>Fecha de sorteo: 02/08/2024</p>
+                <p>Hora de sorteo: 1:00 pm Col</p>
+                <p>Número ganador: 39 - Acumulado para la siguiente fecha.</p>
+                <ul>
+                    <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
+                </ul>
+                <div class="Ganador-10J24">
+                    <img src="../images/Historico de Sorteos/Sorteo 14-08-24/S140824.png">
                 </div>
             </table>
         </div>
