Numero ganador 14 de agosto de 2024

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div><h3>Premio: $240.000.</h3></div>
             <div><h3>Miercoles 14 de Agosto de 2024.</h3></div>
             <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte.</h3>
-            <div class="ganadorRifa"><h3>GANADOR: 1:00 pm COL.</h3></div>
+            <div class="ganadorRifa"><h3>GANADOR: 08.</h3></div>
             </div>
             <div class="CallToAction">
                 <button class="comprar">
