--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <ul id="results" class="results"></ul>
     </div>
     <div class="containerBoleteria">
-
+        <div class="text-boletos">
+            <p>¡Toca para comprar tu boleta de sorteo!</p>
+        </div>
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2000">00</a>
         </button>
@@ -368,6 +370,9 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2099">99</a>
         </button>
+        <div class="text-boletos">
+            <p>¡Toca para comprar tu boleta de sorteo!</p>
+        </div>
     </div>
     <div class="social">
         <p>Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal.<br>¡Únete a nosotros para hacer la diferencia!</p>
