--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <div class="SpecialBox">
         <div>
             <div><h3>Premio: $240.000.</h3></div>
-            <div><h3>Miercoles 14 de Agosto de 2024.</h3></div>
+            <div><h3>Lunes 26 de Agosto de 2024.</h3></div>
             <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte.</h3>
-            <div class="ganadorRifa"><h3>GANADOR: 08.</h3></div>
+            <div class="ganadorRifa"><h3>GANADOR: 1:00 pm COL.</h3></div>
             </div>
             <div class="CallToAction">
                 <button class="comprar">
@@ -367,6 +367,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2099">99</a>
         </button>
+        <div class="space"></div>
     </div>
     <div class="social">
         <p>Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal.<br>¡Únete a nosotros para hacer la diferencia!</p>
