--- a/index.html
+++ b/index.html
@@ -47,21 +47,16 @@
         </div>
     </head>
     <div class="SpecialBox">
-        <div>
-            <div><h3>Premio: $240.000.</h3></div>
-            <div><h3>Lunes 26 de Agosto de 2024.</h3></div>
-            <h3 class="important">Con las dos últimas cifras de la Loteria El Saman de la Suerte.</h3>
-            <div class="ganadorRifa"><h3>GANADOR: 1:00 pm COL.</h3></div>
-            </div>
-            <div class="CallToAction">
-                <button class="comprar">
-                    <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20mi%20boleta">¡Comprar ahora!</a>
-                </button>
+        <div class="containerSbox">
+            <br><b>Premio: $250.000.</b></p>
+            <p><b>Lunes 26 de agosto de 2024.</b></p>
+            <p>Con las <b>dos últimas</b> cifras de la Loteria El Saman de la Suerte.</p>
+            <p><b>GANADOR:</b> 1:00 PM 🇨🇴</p>
         </div>
-            
+    </div>
     </div>
     <div class="search">
-            <h3>Consulta y adquiere tu número ideal</h3>
+            <p><b>Consulta y adquiere tu número ideal</b></p>
             <input type="text" class="buscar-input" id="search" placeholder="Buscar número">
             <button onclick="buscar()" class="buscar-button">Buscar</button>
             <ul id="results" class="results"></ul>
