mejorano texto de compra

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <div class="space"></div>
     </div>
     <div class="social">
-        <p>Con la compra de tu boleta, estás contribuyendo automáticamente con un 3% a fundaciones dedicadas al bienestar animal.<br>¡Únete a nosotros para hacer la diferencia!</p>
+        <p>¡Sabías que con la compra de tu boleta estás haciendo una contribución automática del 3% a fundaciones que se dedican al bienestar animal?</p>
     </div>
     <div class="CallToAction">
         <button class="comprar">
