agrando texto / unete a nosotros

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
     </div>
     <div class="social">
         <p>¡Sabías que con la compra de tu boleta estás haciendo una contribución automática del 3% a fundaciones que se dedican al bienestar animal?</p>
+        <p>¡Únete a nosotros para hacer la diferencia!</p>   
     </div>
     <div class="CallToAction">
         <button class="comprar">
