agregando slider infinite

--- a/index.html
+++ b/index.html
@@ -54,6 +54,55 @@
             <p><b>GANADOR:</b> 1:00 PM 🇨🇴</p>
         </div>
     </div>
+    <div class="slider">
+        <div class="slider-content">
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/ultimo ganador.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/ultimo ganador.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/ultimo ganador.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/ultimo ganador.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/ultimo ganador.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+        </div>
+    </div>
     </div>
     <div class="search">
             <p><b>Consulta y adquiere tu número ideal</b></p>
