agregando id por boleta

--- a/index.html
+++ b/index.html
@@ -111,97 +111,97 @@
             <ul id="results" class="results"></ul>
     </div>
     <div class="containerBoleteria">
-        <button class="Button-01">
+        <button class="Button-01" id="b-00">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2000">00</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2001">01</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-02">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2002">02</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-03">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2003">03</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-04">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2004">04</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-05">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta%2005">05</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-06">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2006">06</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-07">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2007">07</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-08">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2008">08</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-09">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2009">09</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-10">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2010">10</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-11">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2011">11</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b12">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2012">12</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-13">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2013">13</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-14">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2014">14</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-15">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2015">15</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-16">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2016">16</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-17">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2017">17</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-18">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2018">18</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-19">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2019">19</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-20">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2020">20</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-21">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2021">21</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-22">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2022">22</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-23">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2023">23</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-24">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2024">24</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-25">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2025">25</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-26">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2026">26</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-27">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2027">27</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-28">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2028">28</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-29">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2029">29</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-30">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2030">30</a>
         </button>
         <button class="Button-01">
