agregando publicidad a banner

--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
                 <img src="./images/proximo_sorteo.png" alt="">
             </div>
             <div class="slide">
-                <img src="./images/ultimo ganador.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./images/proximo_sorteo.png" alt="">
+                <img src="./images/banner-apoyo.png" alt="">
             </div>
             <div class="slide">
                 <img src="./images/ultimo ganador.png" alt="">
@@ -72,10 +69,7 @@
                 <img src="./images/proximo_sorteo.png" alt="">
             </div>
             <div class="slide">
-                <img src="./images/proximo_sorteo.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./images/proximo_sorteo.png" alt="">
+                <img src="./images/banner-apoyo.png" alt="">
             </div>
             <div class="slide">
                 <img src="./images/ultimo ganador.png" alt="">
@@ -84,13 +78,7 @@
                 <img src="./images/proximo_sorteo.png" alt="">
             </div>
             <div class="slide">
-                <img src="./images/ultimo ganador.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./images/proximo_sorteo.png" alt="">
-            </div>
-            <div class="slide">
-                <img src="./images/proximo_sorteo.png" alt="">
+                <img src="./images/banner-apoyo.png" alt="">
             </div>
             <div class="slide">
                 <img src="./images/ultimo ganador.png" alt="">
@@ -99,7 +87,19 @@
                 <img src="./images/proximo_sorteo.png" alt="">
             </div>
             <div class="slide">
+                <img src="./images/banner-apoyo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/ultimo ganador.png" alt="">
+            </div>
+            <div class="slide">
                 <img src="./images/proximo_sorteo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/banner-apoyo.png" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/ultimo ganador.png" alt="">
             </div>
         </div>
     </div>
